# scout_navigation

./: .gitignore  .gitlab-ci.yml  NOTE.md  README.md  readme_zh.md
scout_base/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
scout_base/cmake/: FindLCM.cmake
scout_base/include/lcmtypes/: wescore.h  wescore.hpp  wescore_lcm_msgs_IMU.h  wescore_lcm_msgs_NavSatFix.h  wescore_lcm_msgs_NavSatStatus.h  wescore_lcm_msgs_Quaternion.h  wescore_lcm_msgs_RawAccel.h  wescore_lcm_msgs_RawGyro.h  wescore_lcm_msgs_RawIMU10DOF.h  wescore_lcm_msgs_RawIMU6DOF.h  wescore_lcm_msgs_RawIMU9DOF.h  wescore_lcm_msgs_RawMag.h  wescore_lcm_msgs_Vector2.h  wescore_lcm_msgs_Vector3.h
scout_base/include/lcmtypes/wescore_lcm_msgs/: IMU.hpp  NavSatFix.hpp  NavSatStatus.hpp  Quaternion.hpp  RawAccel.hpp  RawGyro.hpp  RawIMU10DOF.hpp  RawIMU6DOF.hpp  RawIMU9DOF.hpp  RawMag.hpp  Vector2.hpp  Vector3.hpp
scout_base/include/scout_base/: scout_messenger.hpp
scout_base/launch/: keybord.launch  robot_model.launch  scout_base.launch  scout_base_sim.launch  scout_nav_3d.launch  view_scout_model.launch
scout_base/src/: imu_broadcast_node.cpp  keybord.cpp  scout_base_node.cpp  scout_base_sim_node.cpp  scout_messenger.cpp  scout_ros.cpp
scout_base/src/scout_sdk/: CHANGELOG.md  CMakeLists.txt  README.md
scout_base/src/scout_sdk/scripts/remote_ws/: beaglebone_black.code-workspace
scout_base/src/scout_sdk/src/: CMakeLists.txt
scout_base/src/scout_sdk/src/apps/: CMakeLists.txt
scout_base/src/scout_sdk/src/apps/scout_demo/: scout_demo.cpp
scout_base/src/scout_sdk/src/apps/scout_monitor/src/: scout_monitor.cpp
scout_base/src/scout_sdk/src/comm/: CMakeLists.txt
scout_base/src/scout_sdk/src/comm/async_io/: CMakeLists.txt
scout_base/src/scout_sdk/src/comm/scout_protocol/include/scout_protocol/: scout_can_parser.h  scout_uart_parser.h
scout_base/src/scout_sdk/src/comm/scout_protocol/src/: scout_can_parser.c  scout_uart_parser.c
scout_base/src/scout_sdk/src/demo/: CMakeLists.txt  demo_scout_can.cpp  demo_scout_cpp.cpp
scout_base/src/scout_sdk/src/driver/: CMakeLists.txt
scout_base/src/scout_sdk/src/driver/async_io/: CMakeLists.txt
scout_base/src/scout_sdk/src/driver/async_io/src/: async_serial.cpp  asyncio_utils.hpp
scout_base/src/scout_sdk/src/monitor/app/: CMakeLists.txt  app_scout_monitor.cpp
scout_base/src/scout_sdk/src/monitor/include/monitor/: scout_monitor.hpp
scout_base/src/scout_sdk/src/monitor/src/: scout_monitor.cpp
scout_base/src/scout_sdk/src/monitor/tests/: CMakeLists.txt
scout_base/src/scout_sdk/src/scout/: CMakeLists.txt
scout_base/src/scout_sdk/src/scout/include/scout/: scout_base.hpp  scout_can_protocol.h  scout_command.hpp  scout_serial.hpp  scout_state.hpp
scout_base/src/scout_sdk/src/scout/src/: scout_base.cpp
scout_base/src/scout_sdk/src/scout/tests/: CMakeLists.txt  test_can_msg.cpp  test_scout_base.cpp  test_scout_cpp.cpp
scout_base/src/scout_sdk/src/scout_base/include/scout_base/: scout_base.hpp
scout_base/src/scout_sdk/src/scout_base/src/: scout_base.cpp
scout_base/src/scout_sdk/src/scout_cpp/: CMakeLists.txt
scout_base/src/scout_sdk/src/scout_cpp/include/scout/: scout_robot.h
scout_base/src/scout_sdk/src/scout_cpp/src/: scout_robot.cpp
scout_base/src/scout_sdk/src/scout_cpp/tests/: CMakeLists.txt  test_scout_cpp.cpp
scout_base/src/scout_sdk/src/scout_io/: CMakeLists.txt
scout_base/src/scout_sdk/src/scout_io/include/scout_io/: serialport.h  transport.h
scout_base/src/scout_sdk/src/scout_io/src/: serialport.cpp  transport.cpp
scout_base/src/scout_sdk/src/sdk_core/: CMakeLists.txt
scout_base/src/scout_sdk/src/sdk_core/async_io/: CMakeLists.txt
scout_base/src/scout_sdk/src/sdk_core/async_io/include/async_io/: async_serial.hpp
scout_base/src/scout_sdk/src/sdk_core/async_io/tests/: CMakeLists.txt  test_aserial.cpp
scout_base/src/scout_sdk/src/sdk_core/scout_base/: CMakeLists.txt
scout_base/src/scout_sdk/src/sdk_core/scout_base/include/scout/: scout_base.hpp  scout_can_protocol.h  scout_io.hpp  scout_serial_protocol.h
scout_base/src/scout_sdk/src/sdk_core/scout_base/src/: scout_base.cpp
scout_base/src/scout_sdk/src/sdk_core/scout_base/tests/: CMakeLists.txt  test_can_msg.cpp  test_scout_base.cpp
scout_base/src/scout_sdk/src/sdk_core/unit_tests/: CMakeLists.txt
scout_base/src/scout_sdk/src/sdk_core/unit_tests/gtests/: scout_can_protocol_test.cpp
scout_base/src/scout_sdk/src/unit_tests/: CMakeLists.txt
scout_base/src/scout_sdk/src/unit_tests/gtests/: scout_can_protocol_test.cpp
scout_base/urdf/: agilex_scout.urdf
scout_bringup/: CMakeLists.txt
scout_bringup/launch/: scout_base_gazebo_sim.launch  scout_base_sim.launch  scout_mapping.launch  scout_mapping_sim.launch  scout_minimal.launch  scout_minimal_sim.launch  scout_minimal_uart.launch  scout_nav_2d.launch  scout_teleop_keyboard.launch  sensor_d435i.launch  sensor_rs16_filter.launch  sensor_rslidar16.launch
scout_description/launch/: display_model.launch  load_base_model.launch  load_nav_model.launch  scout_v2_sensors.launch  scout_v2_stock.launch
scout_description/meshes/: estop_button.dae  estop_protector.dae  parts_metal_black.dae  parts_plastic_black.dae  wheel_hub.dae  wheel_hub_cap.dae  wheel_tire.dae
scout_description/rviz/: model_display.rviz
scout_description/urdf/: onboard_sensors.urdf  scout_v2.gazebo  scout_v2.proto  scout_v2.urdf  scout_v2.xacro  scout_v2_nav.xacro  scout_v2_webots.xacro  scout_v2_webots_nav.xacro  (+4 more)
scout_gazebo_sim/: CMakeLists.txt  scout_v2.gazebo
scout_nav_bringup/: CMakeLists.txt  package.xml
scout_nav_platform/: CMakeLists.txt  package.xml
scout_nav_sample/: CMakeLists.txt  package.xml
scout_navigation/: CMakeLists.txt  package.xml
scout_robot/: CMakeLists.txt  package.xml  readme.md
scout_ros/: CHANGELOG.md  CMakeLists.txt  package.xml
scout_ros_nav/: CMakeLists.txt  package.xml
scout_sdk/: CMakeLists.txt  README.md  package.xml
scout_webots_nav_sample/: CMakeLists.txt  package.xml
scout_webots_sim/: CMakeLists.txt  README.md  package.xml
scout_webots_sim_sample/: CMakeLists.txt  package.xml
(+176 files in other folders)
